--- a/appendix/FiberOptics.tex
+++ b/appendix/FiberOptics.tex
@@ -17,14 +17,14 @@ The simplest refractive model of an optical fiber is linear and constant for the
 \begin{figure}[htbp]
     \centering
     \includegraphics[width=11cm]{images/Appendices/step_index_fiber.png}
-    \caption{Refractive index within a mono-mode optical fiber transmitting an LP01 mode according to its radial position and media (core or cladding)\cite{Single-Mode_Fiber_Optic}.}
+    \caption{Refractive index within a mono-mode optical fiber transmitting an LP01 mode according to its radial position and media (core or cladding) \protect\cite{Single-Mode_Fiber_Optic}.}
     \label{fig:single-mode_fibre_refractive_index}
 \end{figure}
 
 \begin{figure}[htbp]
     \centering
     \includegraphics[width=11cm]{images/Appendices/step_index_fiber_modes.png}
-    \caption{Refractive indices for different-amplitude LP modes in a multimode fiber according to their radial position. \cite{FiberOptics_Refractive_Index}. Notice that all refractive indices vary around 1.444.}
+    \caption{Refractive indices for different-amplitude LP modes in a multimode fiber according to their radial position. \protect\cite{FiberOptics_Refractive_Index}. Notice that all refractive indices vary around 1.444.}
     \label{fig:multi-mode_fibre_refractive_index}
 \end{figure}
 
