--- a/buc.bib
+++ b/buc.bib
@@ -237,6 +237,23 @@
     doi = {10.1364/OL.42.001836},
 }
 
+@article{Kotlyar:16,
+    author = {Victor V. Kotlyar and Alexey A. Kovalev and Alexey P. Porfirev},
+    journal = {J. Opt. Soc. Am. A},
+    keywords = {Diffraction theory; Propagation; Optical vortices ; Optical elements; Optical vortices; Parametric down conversion; Phase plates; Photonic entanglement; Spiral phase},
+    number = {12},
+    pages = {2376--2384},
+    publisher = {OSA},
+    title = {Optimal phase element for generating a perfect optical vortex},
+    volume = {33},
+    month = {Dec},
+    year = {2016},
+    url = {http://josaa.osa.org/abstract.cfm?URI=josaa-33-12-2376},
+    doi = {10.1364/JOSAA.33.002376},
+}
+
+
+
 @article{Ren:13,
     author = {Yongxiong Ren and Hao Huang and Guodong Xie and Nisar Ahmed and Yan Yan and Baris I. Erkmen and Nivedita Chandrasekaran and Martin P. J. Lavery and Nicholas K. Steinhoff and Moshe Tur and Samuel Dolinar and Mark Neifeld and Miles J. Padgett and Robert W. Boyd and Jeffrey H. Shapiro and Alan E. Willner},
     journal = {Opt. Lett.},
@@ -440,4 +457,12 @@
     howpublished = {\url{https://www.bhphotovideo.com/c/product/440825-REG/Celestron_11068_NexStar_6_SE_6_0_150mm.html}},
     note = {Retrieved: 10.13.2020},
     year = {2020},
+}
+
+@misc{besselzero-MathWorks,
+    author = {Jason Nicholson},
+    title = {Bessel Zero Solver},
+    howpublished = {\url{https://www.mathworks.com/matlabcentral/fileexchange/48403-bessel-zero-solver}},
+    note = {Retrieved: 09.05.2020},
+    year = {2018},
 }
